--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
 .DS_Store
 node_modules/.cache/
 node_modules/.cache/.eslintcache
+node_modules/.cache/.eslintcache
+node_modules/.cache/.eslintcache
+node_modules/.cache/.eslintcache
